--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 @layer base {
   html {
-    font-family: "DM Sans", sans-serif;
-    color: #ffffff;
+    font-family: 'DM Sans', sans-serif;
   }
 }
 
@@ -14,7 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   backface-visibility: hidden;
-  font-family: "Public Sans", sans-serif;
+  font-family: 'DM Sans', sans-serif;
 }
 
 .scrollbar-hide {
@@ -58,6 +63,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
